kustomize/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: simple
spec:
  host: quarkus.apps-crc.testing
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: simple
    weight: 100
  wildcardPolicy: None
